# avtomat_test_hexlet

./: README.md  pyproject.toml
testo/: capitalize.py
tests/: test_capitalize.py
